WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61191
Interpreter uses wrong bytecode offset for determining exception handler
https://bugs.webkit.org/show_bug.cgi?id=61191
Summary
Interpreter uses wrong bytecode offset for determining exception handler
Oliver Hunt
Reported
2011-05-20 08:58:36 PDT
Interpreter uses wrong bytecode offset for determining exception handler
Attachments
Patch
(2.87 KB, patch)
2011-05-20 09:03 PDT
,
Oliver Hunt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2011-05-20 09:03:50 PDT
Created
attachment 94229
[details]
Patch
Oliver Hunt
Comment 2
2011-05-20 09:20:17 PDT
Committed
r86960
: <
http://trac.webkit.org/changeset/86960
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug